--- a/Duffy/DFPhotoViewCell.xib
+++ b/Duffy/DFPhotoViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -7,14 +7,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="1" customClass="DFPhotoViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2gT-dn-UU6">
-                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                    <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="MLB-EV-fkB">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="MLB-EV-fkB">
                     <rect key="frame" x="5" y="163" width="147" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -23,14 +23,13 @@
                 </label>
             </subviews>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="2gT-dn-UU6" secondAttribute="trailing" id="08O-OK-WTe"/>
-                <constraint firstAttribute="bottom" secondItem="MLB-EV-fkB" secondAttribute="bottom" constant="16" id="QIa-7R-h0Z"/>
-                <constraint firstItem="2gT-dn-UU6" firstAttribute="top" secondItem="1" secondAttribute="top" id="SqT-FX-Ebv"/>
-                <constraint firstItem="2gT-dn-UU6" firstAttribute="centerX" secondItem="MLB-EV-fkB" secondAttribute="centerX" id="VBP-ig-lxa"/>
-                <constraint firstAttribute="trailing" secondItem="MLB-EV-fkB" secondAttribute="trailing" constant="5" id="Wkx-6V-4TK"/>
-                <constraint firstItem="MLB-EV-fkB" firstAttribute="top" secondItem="2gT-dn-UU6" secondAttribute="bottom" constant="13" id="cnJ-iH-p7p"/>
-                <constraint firstItem="MLB-EV-fkB" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="5" id="nru-59-KhW"/>
-                <constraint firstItem="2gT-dn-UU6" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="pmS-OT-IQP"/>
+                <constraint firstItem="MLB-EV-fkB" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="5" id="8M9-cn-jpM"/>
+                <constraint firstAttribute="trailing" secondItem="2gT-dn-UU6" secondAttribute="trailing" id="P3Z-Ut-YxP"/>
+                <constraint firstItem="MLB-EV-fkB" firstAttribute="top" secondItem="2gT-dn-UU6" secondAttribute="bottom" constant="43" id="b0a-zI-HCU"/>
+                <constraint firstAttribute="bottom" secondItem="2gT-dn-UU6" secondAttribute="bottom" id="qgQ-L9-sD2"/>
+                <constraint firstItem="2gT-dn-UU6" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="wIE-LC-HI3"/>
+                <constraint firstItem="2gT-dn-UU6" firstAttribute="top" secondItem="1" secondAttribute="top" id="xez-Rp-y9J"/>
+                <constraint firstAttribute="trailing" secondItem="MLB-EV-fkB" secondAttribute="trailing" constant="-32" id="zja-mR-EpY"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
