--- a/Duffy/DFSettingsViewController.xib
+++ b/Duffy/DFSettingsViewController.xib
@@ -16,7 +16,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="cKn-h7-xpZ">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="400"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
@@ -24,10 +24,23 @@
                         <outlet property="delegate" destination="-1" id="tJv-D8-cKP"/>
                     </connections>
                 </tableView>
+                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hBH-us-RPc">
+                    <rect key="frame" x="251" y="419" width="51" height="31"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <connections>
+                        <action selector="pipelineEnabledSwitchChanged:" destination="-1" eventType="valueChanged" id="nly-M1-hd8"/>
+                    </connections>
+                </switch>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Enable pipeline for device" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3PE-P3-hNc">
+                    <rect key="frame" x="20" y="424" width="198" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="cKn-h7-xpZ" secondAttribute="bottom" id="7nj-Kb-Lah"/>
+                <constraint firstAttribute="bottom" secondItem="cKn-h7-xpZ" secondAttribute="bottom" constant="168" id="7nj-Kb-Lah"/>
                 <constraint firstAttribute="trailing" secondItem="cKn-h7-xpZ" secondAttribute="trailing" id="OOi-Cw-WfH"/>
                 <constraint firstItem="cKn-h7-xpZ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Q3y-5F-kIE"/>
                 <constraint firstItem="cKn-h7-xpZ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ggX-jd-bbN"/>
