Peanut:  Add in Natty

--- a/peanut/photos/templates/photos/search_result.html
+++ b/peanut/photos/templates/photos/search_result.html
@@ -18,10 +18,15 @@
 				{% endfor %}
 			</table>
 		</td>
-		<td>
+		<td width="200px">
 			{{ result.timeTaken }}
 		</td>
+		<td width="50px">
+			{{ photoId }}
+		<td>
 	</tr>
 </table>
 
+<!--
 <span class="ui-li-count">2</span></a>
+-->
