--- a/peanut/photos/templates/photos/search_webview.html
+++ b/peanut/photos/templates/photos/search_webview.html
@@ -60,7 +60,7 @@
 			{% endfor %}
 			
 		</div>
-		<p>Showing up to {{ count }} results</p>
+		<p>Showing {{ count }} of {{ size }} results</p>
 	</div>
 </div>
 
